--- a/index.html
+++ b/index.html
@@ -9,6 +9,53 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav>
+            <h2 class="nav-title">G3 Architects</h2>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div>
+                <h2 class="banner-title">Brand New</h2>
+                <h2 class="banner-title">Group of Architects</h2>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+                <img src="images/banner.png" alt="">
+            </div>
+        </div>
+    </header>
+    <main>
+        <!-- Features Images  -->
+        <section class="feature-images">
+            <div class="images">
+            <div class="image">
+                <img src="images/team1.png" alt="">
+            </div>
+            <div class="image">
+                <img src="images/team2.png" alt="">
+            </div>
+            <div class="image">
+                <img src="images/team3.png" alt="">
+            </div>
+            <div class="image">
+                <img src="images/team4.png" alt="">
+            </div>
+            </div>
+            <div>
+                <h2 class="quick-list">Quick list <span><b>of Our</b> </span></h2>
+                <h2 class="quick-list-clr">Features</h2>
+                <p class="quick-list-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="feature-btn-primary">Explore More</button>
+            </div>
+            
+        </section>
+    </main>
 </body>
 </html>
