Mobile Responsive and Hover Done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <main>
-        <!-- Features Images  -->
+        <!-- Features Images Start-->
         <section class="feature-images">
             <div class="images">
             <div class="image">
@@ -56,6 +56,99 @@
             </div>
             
         </section>
+        <!-- Features Images End-->
+        <!-- love & enjoy Starts-->
+        <section class="love-enjoy">
+        <div class="love&enjoy">
+            <div>
+                <h2 class="love-title">Features you will love & enjoy</h2>
+                <p class="love-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+            <div class="love-title-info">
+                <h4 class="love-title-info-header">Dexktop & Mobile Version</h4>
+                <p class="love-title-info-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div> 
+            <div class="love-title-info">
+                <h4 class="love-title-info-header">Drag & Drop Builder</h4>
+                <p class="love-title-info-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div> 
+            <div class="love-title-info">
+                <h4 class="love-title-info-header">Awesome Modern Design</h4>
+                <p class="love-title-info-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div> 
+            <div class="love-title-info">
+                <h4 class="love-title-info-header">Super Easy to Edit</h4>
+                <p class="love-title-info-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div> 
+        </div>
+        <div class="architect-image">
+            <img src="images/architect.png" alt="">
+            <button class="ten-years-btn">10+ Year <span><h6>Experience</h6></span></button>
+        </div>
+    </section>
+        <!-- love & enjoy End-->
+         <!-- Some Facts Starts -->
+    <section class="some-facts">
+        <div class="some-facts-header">
+            <h3 class="some-facts-title">Some Facts</h3>
+        </div>
+        <div class="some-facts-paragraph">
+            <p class="some-facts-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+
+        <div class="some-facts-banners">
+            <div class="some-facts-banner">
+                <img src="images/icons/ribon.png" alt="">
+                <h2 class="some-facts-banner-header">54</h2>
+                <p class="some-facts-banner-description">Awards Winnings</p>
+            </div>
+            <div class="some-facts-banner">
+                <img src="images/icons/projects.png" alt="">
+                <h2 class="some-facts-banner-header">1458</h2>
+                <p class="some-facts-banner-description">Project Finished</p>
+            </div>
+            <div class="some-facts-banner">
+                <img src="images/icons/customers.png" alt="">
+                <h2 class="some-facts-banner-header">590</h2>
+                <p class="some-facts-banner-description">Clients Worked</p>
+            </div>
+            <div class="some-facts-banner">
+                <img src="images/icons/email.png" alt="">
+                <h2 class="some-facts-banner-header">22578</h2>
+                <p class="some-facts-banner-description">Email Send</p>
+            </div>
+        </div>
+    </section>
+        <!-- Some Facts End -->
+        <!-- Our Sponsors Start  -->
+        <section class="our-sponsors">
+            <div class="sponsors-info">
+                <h2 class="sponsors-title">Our Sponsors</h2>
+                <p class="sponsors-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsors">
+                <div class="sponsor">
+                    <img src="images/sponsors/spotify.png" alt="">
+                </div>
+                <div class="sponsor">
+                    <img src="images/sponsors/amazon.png" alt="">
+                </div>
+                <div class="sponsor">
+                    <img src="images/sponsors/google.png" alt="">
+                </div>
+                <div class="sponsor">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+                <div class="sponsor">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="copyright">
+            <p class="copyright-info">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 </body>
 </html>
