Just One Section Added

--- a/index.html
+++ b/index.html
@@ -120,6 +120,43 @@
         </div>
     </section>
         <!-- Some Facts End -->
+        <!-- Greatest Architect Start -->
+        <section class="great-architects">
+            <h2 class="great-architects-title">Great Architect</h2>
+        <div class="architects">
+            <div class="architect">
+                <div class="architect-banner">
+                    <img src="images/Lloyd-Wright.jpg" alt="">
+                </div>
+                <div class="architect-detail">
+                    <h3 class="architect-title">
+                        Lioyd Wright
+                    </h3>
+                </div>
+            </div>
+            <div class="architect">
+                <div class="architect-banner">
+                    <img src="images/Le Corbusier.jpg" alt="">
+                </div>
+                <div class="architect-detail">
+                    <h3 class="architect-title">
+                        Le Corbusier
+                    </h3>
+                </div>
+            </div>
+            <div class="architect">
+                <div class="architect-banner">
+                    <img src="images/Norman Foster.jpg" alt="">
+                </div>
+                <div class="architect-detail">
+                    <h3 class="architect-title">
+                        Norman Foster
+                    </h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Greatest Architect End -->
         <!-- Our Sponsors Start  -->
         <section class="our-sponsors">
             <div class="sponsors-info">
